Resolves: tdf#100901 crash pressing tab in r-o document with hyperlink

rather odd union in use here. Trying to call SwTextField::GetStart
on SwTextINetFormat blows up under visual studio.

Change-Id: Ic8145d7645bd6a68ef19e018311a4de6e6958bcb